tests/good/while_if.lt
void main(){
     int i = 0;
    while (i < 10) {
        print(i);
        i = i + 1;
    }

    if (true)
        print("TRUE");
    if (false)
        print("FALSE");
    else
        print("TRUE AGAIN");
}