tests/bad/runtime_error.lt
void main(){
    int a = 10 / 0;
    print(a);
}